--- a/expat-journal/src/App.css
+++ b/expat-journal/src/App.css
@@ -37,8 +37,65 @@
 }
 .user-card-img{
   width: 100%;
+  border-radius: 5px;
 }
 /* 
 .styled-card{
   background: #e5e5e5;
 } */
+
+/* Trip Component*/
+
+.trip-sub-nav {
+  width: 93%;
+  margin: 10px auto 0;
+  display: flex;
+  justify-content: center;
+  border-radius: 5px;
+  border-bottom: 1px solid lightgrey;
+
+}
+
+.public-trip-header-div{
+  height: 40vh;
+  overflow: hidden;
+  position: relative
+}
+.public-trip-header-img {
+  position: absolute;
+  top:-100%; left:0; right: 0; bottom:-90%;
+  margin: auto;
+}
+
+.public-trip-content {
+  background: rgb(238, 238, 238);
+  border: 1px solid lightgrey;
+  border-top: none;
+  border-radius: 5px;
+  width: 93%;
+  margin: 0 auto;
+  font-size: 125%;
+  padding-top: 10px;
+  display: flex;
+  flex-direction: row;
+}
+
+.trip-sub-nav-tab {
+  background: rgb(238, 238, 238);
+  border: 1px solid lightgrey;
+  border-bottom:  rgb(238, 238, 238);
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  margin: 0 5px;
+  padding: 15px;
+  font-size: 150%;
+  color: black;
+}
+
+.image-list-container {
+  width: 100%;
+}
+
+/* Blog */
+
+
