--- a/expat-journal/src/App.css
+++ b/expat-journal/src/App.css
@@ -1,142 +1,139 @@
 .App {
-  text-align: center;
-  font-family: "Roboto Condensed", serif;
+	text-align: center;
+	font-family: 'Roboto Condensed', serif;
+	min-height: 100vh;
 }
 
 .App-logo {
-  height: 40vmin;
+	height: 40vmin;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+	background-color: #282c34;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
+	color: white;
 }
 
 .App-link {
-  color: #09d3ac;
+	color: #09d3ac;
 }
 
-
-.user-cards{
-  display:flex;
-  flex-wrap: wrap;
- margin:3rem;
- justify-content: space-around;
- 
+.user-cards {
+	display: flex;
+	flex-wrap: wrap;
+	margin: 3rem;
+	justify-content: space-around;
 }
 
-.user-card-container{
-  display:flex;
-  
-  margin-bottom: 2rem;
+.user-card-container {
+	display: flex;
+
+	margin-bottom: 2rem;
 }
-.user-card-img{
-  width: 100%;
-  border-radius: 5px;
+.user-card-img {
+	width: 100%;
+	border-radius: 5px;
 }
 /* 
 .styled-card{
   background: #e5e5e5;
 } */
 
-
 /* FONT OVERRIDES */
- h1, h2, p {
-  font-family: "Roboto Condensed", serif;
+h1,
+h2,
+p {
+	font-family: 'Roboto Condensed', serif;
 }
 
 /* pushes down Users h1 in Browse */
 .user-card-parent h1 {
-  margin: 3%;
-  font-size: 3rem;
+	margin: 3%;
+	font-size: 3rem;
 }
 
 /* MEDIA QUERIES FOR MOBILE */
 @media screen and (max-width: 500px) {
-  .login-btn {
-    display: none;
-  }
-  .member-txt {
-    display: none;
-  }
+	.login-btn {
+		display: none;
+	}
+	.member-txt {
+		display: none;
+	}
 }
-
-
 
 /* Traveler.js */
 
-.main-pic-traveler{
-  width:70%;
+.main-pic-traveler {
+	width: 70%;
 }
-
 
 /* Profile.js */
-.profile-trip-div{
-  /* border: 1px solid black; */
-  font-size:rem;
+.profile-trip-div {
+	/* border: 1px solid black; */
+	font-size: rem;
 }
-.main-pic-profile{
-  width:70%;
+.main-pic-profile {
+	width: 70%;
 }
 
 /* Trip Component*/
 
 .trip-sub-nav {
-  width: 93%;
-  margin: 10px auto 0;
-  display: flex;
-  justify-content: center;
-  border-radius: 5px;
-  border-bottom: 1px solid lightgrey;
-
+	width: 93%;
+	margin: 10px auto 0;
+	display: flex;
+	justify-content: center;
+	border-radius: 5px;
+	border-bottom: 1px solid lightgrey;
 }
 
-.public-trip-header-div{
-  height: 40vh;
-  overflow: hidden;
-  position: relative
+.public-trip-header-div {
+	height: 40vh;
+	overflow: hidden;
+	position: relative;
 }
 .public-trip-header-img {
-  position: absolute;
-  top:-100%; left:0; right: 0; bottom:-90%;
-  margin: auto;
+	position: absolute;
+	top: -100%;
+	left: 0;
+	right: 0;
+	bottom: -90%;
+	margin: auto;
 }
 
 .public-trip-content {
-  background: rgb(238, 238, 238);
-  border: 1px solid lightgrey;
-  border-top: none;
-  border-radius: 5px;
-  width: 93%;
-  margin: 0 auto;
-  font-size: 125%;
-  padding-top: 10px;
-  display: flex;
-  flex-direction: row;
+	background: rgb(238, 238, 238);
+	border: 1px solid lightgrey;
+	border-top: none;
+	border-radius: 5px;
+	width: 93%;
+	margin: 0 auto;
+	font-size: 125%;
+	padding-top: 10px;
+	display: flex;
+	flex-direction: row;
 }
 
 .trip-sub-nav-tab {
-  background: rgb(238, 238, 238);
-  border: 1px solid lightgrey;
-  border-bottom:  rgb(238, 238, 238);
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
-  margin: 0 5px;
-  padding: 15px;
-  font-size: 150%;
-  color: black;
+	background: rgb(238, 238, 238);
+	border: 1px solid lightgrey;
+	border-bottom: rgb(238, 238, 238);
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	margin: 0 5px;
+	padding: 15px;
+	font-size: 150%;
+	color: black;
 }
 
 .image-list-container {
-  width: 100%;
+	width: 100%;
 }
 
 /* Blog */
-
-
