--- a/expat-journal/src/App.css
+++ b/expat-journal/src/App.css
@@ -96,6 +96,19 @@
   margin: 0;
 }
 
+
+/* from ryan */
+.public-trip-header-div{
+  height: 40vh;
+  overflow: hidden;
+  position: relative
+}
+.public-trip-header-img {
+  position: absolute;
+  top:-100%; left:0; right: 0; bottom:-90%;
+  margin: auto;
+}
+
 .trip-sub-nav {
   width: 93%;
   margin: 10px auto 0;
