--- a/expat-journal/src/App.css
+++ b/expat-journal/src/App.css
@@ -117,15 +117,16 @@
 }
 
 /* from ryan */
-.public-trip-header-div{
+.private-trip-header-div{
   height: 40vh;
   overflow: hidden;
   position: relative
 }
-.public-trip-header-img {
+.private-trip-header-img {
   position: absolute;
   top:-100%; left:0; right: 0; bottom:-90%;
   margin: auto;
+  width: 90%;
 }
 
 .trip-sub-nav {
@@ -147,6 +148,7 @@
   position: absolute;
   top:-100%; left:0; right: 0; bottom:-90%;
   margin: auto;
+  width: 90%;
 }
 
 .public-trip-content {
