added trip cards to public profile

--- a/expat-journal/src/App.css
+++ b/expat-journal/src/App.css
@@ -77,6 +77,15 @@ p {
 	width: 70%;
 }
 
+.traveler-trips-container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.traveler-trip-div {
+  font-size: 200%
+}
+
 /* Profile.js */
 .profile-trip-div {
 	/* border: 1px solid black; */
@@ -141,3 +150,8 @@ p {
 }
 
 /* Blog */
+/* Footer */
+.footer {
+  position: absolute;
+  bottom: 0px;
+}
