--- a/expat-journal/src/App.css
+++ b/expat-journal/src/App.css
@@ -129,11 +129,28 @@ p {
 	margin: 0 5px;
 	padding: 15px;
 	font-size: 150%;
-	color: black;
-}
+	color: black; 
+} 
 
 .image-list-container {
 	width: 100%;
 }
+
+.onclick-name{
+	background: rgb(238, 238, 238);
+	border: 1px solid lightgrey;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	padding: 10px;
+	font-size: 90%;
+	color: black;
+	border-radius: 5px;
+	margin-bottom: .8rem;
+	
+	
+}
+ .onclick-name:hover {
+	color: #4183c4;
+  }
 
 /* Blog */
