--- a/expat-journal/src/App.css
+++ b/expat-journal/src/App.css
@@ -91,6 +91,7 @@ p {
 .profile-trip-div {
 	/* border: 1px solid black; */
 	font-size: rem;
+}
 /* Trip Component*/
 .header-container {
   margin: 30px 0;
